--- a/SwiftyAPNS.xcodeproj/xcshareddata/xcschemes/SwiftyAPNS-Package.xcscheme
+++ b/SwiftyAPNS.xcodeproj/xcshareddata/xcschemes/SwiftyAPNS-Package.xcscheme
@@ -28,9 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "SwiftyAPNS::SwiftyAPNSTests"
+               BuildableName = "SwiftyAPNSTests.xctest"
+               BlueprintName = "SwiftyAPNSTests"
+               ReferencedContainer = "container:SwiftyAPNS.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -42,17 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "SwiftyAPNS::SwiftyAPNS"
-            BuildableName = "SwiftyAPNS.framework"
-            BlueprintName = "SwiftyAPNS"
-            ReferencedContainer = "container:SwiftyAPNS.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
