--- a/Tests/SwiftyAPNSTests/KeyConfig.plist
+++ b/Tests/SwiftyAPNSTests/KeyConfig.plist
@@ -3,14 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>KEY_PATH</key>
-	<string>/path/to/push_key.p8</string>
+	<string>/Users/polyitan/Keys/AuthKey_VJ6A9HP27Z.p8</string>
 	<key>KEY_ID</key>
-	<string>1234567890</string>
+	<string>VJ6A9HP27Z</string>
 	<key>TEAM_ID</key>
-	<string>1234567890</string>
+	<string>TV65C39GBR</string>
 	<key>TOKEN</key>
-	<string>86da0761d2f2b50e816109c0d9ac79b8efbcb9f33ea01248ed3d3aba3c59a224</string>
+	<string>9cb7c6f3dc035179a53a0bf0f45947108137fd46fabcdf6737dfe2ad4c6a429a</string>
 	<key>TOPIC</key>
-	<string>com.push.example</string>
+	<string>com.polyitan.push</string>
 </dict>
 </plist>
